feat: Global syllabus, allocations sync, improved WhatsApp messaging, sample CSVs

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>93331e87-8854-4598-ab77-a625e30fad3c</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Smart Attendance</title>
+    <meta name="description" content="Build by Atharv" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="93331e87-8854-4598-ab77-a625e30fad3c" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Smart Attendance" />
+    <meta property="og:description" content="Build by Atharv" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/src/assets/rit-logo.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/src/assets/rit-logo.jpg" />
   </head>
 
   <body>
