--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:image" content="/src/assets/rit-logo.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
+    <meta name="twitter:title" content="Smart Attendance" />
     <meta name="twitter:image" content="/src/assets/rit-logo.jpg" />
   </head>
 
