--- a/project-report/References.html
+++ b/project-report/References.html
@@ -1,76 +1,26 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>References</title>
-    <style>
-        @page {
-            size: A4;
-            margin-left: 3.5cm;
-            margin-top: 2.5cm;
-            margin-right: 1.25cm;
-            margin-bottom: 1.25cm;
-        }
-        body {
-            font-family: "Times New Roman", Times, serif;
-            font-size: 12pt;
-            line-height: 2;
-            text-align: justify;
-            margin: 0 auto;
-            max-width: 21cm;
-            padding: 2cm;
-            background-color: white;
-            color: black;
-        }
-        h1.chapter-name {
-            font-size: 14pt;
-            text-transform: uppercase;
-            font-weight: bold;
-            text-align: center;
-            margin-bottom: 24pt;
-        }
-        .reference-item {
-            margin-bottom: 12pt;
-            padding-left: 1cm;
-            text-indent: -1cm;
-        }
-        a {
-            color: black;
-            text-decoration: none;
-        }
-    </style>
+<meta charset="UTF-8">
+<style>
+/* Reset */
+body { font-family: 'Times New Roman', serif; line-height: 1.5; text-align: justify; }
+h1, h2, h3 { text-align: center; }
+p { margin-bottom: 1em; }
+table { width: 100%; border-collapse: collapse; margin: 1em 0; }
+th, td { border: 1px solid #000; padding: 5px; }
+.diagram-wrap { border: none !important; margin: 20px auto !important; width: 100% !important; }
+</style>
 </head>
 <body>
-
-    <h1 class="chapter-name">REFERENCES</h1>
-
-    <div class="reference-item">
-        [1] Espressif Systems, "ESP32 Series Datasheet," Version 3.7, 2023. [Online]. Available: https://www.espressif.com/sites/default/files/documentation/esp32_datasheet_en.pdf
-    </div>
-
-    <div class="reference-item">
-        [2] Supabase, "Database Documentation and Realtime API," 2024. [Online]. Available: https://supabase.com/docs
-    </div>
-
-    <div class="reference-item">
-        [3] Adafruit Industries, "Adafruit Optical Fingerprint Sensor (R307) Usage Guide," 2022. [Online]. Available: https://learn.adafruit.com/adafruit-optical-fingerprint-sensor
-    </div>
-
-    <div class="reference-item">
-        [4] React Community, "React Documentation," Meta Platforms, 2024. [Online]. Available: https://react.dev/
-    </div>
-
-    <div class="reference-item">
-        [5] S. Kumar and R. Singh, "Biometric Attendance Systems: A Review," <em>International Journal of Advanced Research in Computer Science</em>, vol. 8, no. 5, pp. 112-115, 2017.
-    </div>
-
-    <div class="reference-item">
-        [6] M. Rouse, "Internet of Things (IoT)," TechTarget, 2019. [Online].
-    </div>
-
-    <div class="reference-item">
-        [7] MDN Web Docs, "WebSockets API," Mozilla, 2024. [Online]. Available: https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API
-    </div>
+<h1>References</h1>
+<p>[1] Ross, A., &amp; Jain, A. (2021). &quot;Biometric sensor interoperability&quot;. <em>IEEE Trans. on PAMI</em>.<br />
+[2] Espressif Systems. (2023). &quot;ESP32 Technical Reference Manual&quot;.<br />
+[3] Supabase. (2024). &quot;Realtime &amp; Edge Functions Documentation&quot;.<br />
+[4] &quot;R307 Optical Fingerprint Sensor Datasheet&quot;, Hangzhou Grow Technology.</p>
+<hr />
+<p><em>Diagrams referenced in List of Figures are available in the project documentation folder.</em></p>
 
 </body>
 </html>
