--- a/project-report/List-of-Tables.html
+++ b/project-report/List-of-Tables.html
@@ -14,8 +14,13 @@ th, td { border: 1px solid #000; padding: 5px; }
 </style>
 </head>
 <body>
-<h2>Acknowledgement (iii)</h2>
-<p>I express sincere gratitude to <strong>[Guide Name]</strong> for guidance and feedback, to the <strong>Department of Applied AI &amp; ML</strong> for providing laboratory resources, to my group members for their dedicated collaboration, and to my parents for their unwavering support throughout this project.</p>
+<h2>List of Tables (vii)</h2>
+<ol>
+<li>Pin Configuration (ESP32 to R307/OLED) – Table 1</li>
+<li>Security Threat Matrix – Table 2</li>
+<li>Database Entities Description – Table 3</li>
+</ol>
+<hr />
 
 </body>
 </html>
