--- a/project-report/Title-Page.html
+++ b/project-report/Title-Page.html
@@ -1,80 +1,27 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title Page</title>
-    <style>
-        @page {
-            size: A4;
-            margin-left: 3.5cm;
-            margin-top: 2.5cm;
-            margin-right: 1.25cm;
-            margin-bottom: 1.25cm;
-        }
-        body {
-            font-family: "Times New Roman", Times, serif;
-            font-size: 14pt; /* Title page usually larger/bolder */
-            line-height: 1.5;
-            text-align: center;
-            margin: 0 auto;
-            max-width: 21cm;
-            padding: 2cm;
-            background-color: white;
-            color: black;
-        }
-        .project-title {
-            font-size: 20pt;
-            font-weight: bold;
-            text-transform: uppercase;
-            margin-top: 2cm;
-            margin-bottom: 2cm;
-        }
-        .submission-text {
-            font-size: 14pt;
-            margin-bottom: 2cm;
-        }
-        .author-block {
-            font-weight: bold;
-            margin-bottom: 3cm;
-        }
-        .institute-block {
-            font-weight: bold;
-            text-transform: uppercase;
-            margin-top: auto;
-        }
-        /* No page number on title page */
-    </style>
+<meta charset="UTF-8">
+<style>
+/* Reset */
+body { font-family: 'Times New Roman', serif; line-height: 1.5; text-align: justify; }
+h1, h2, h3 { text-align: center; }
+p { margin-bottom: 1em; }
+table { width: 100%; border-collapse: collapse; margin: 1em 0; }
+th, td { border: 1px solid #000; padding: 5px; }
+.diagram-wrap { border: none !important; margin: 20px auto !important; width: 100% !important; }
+</style>
 </head>
 <body>
-
-    <div class="project-title">
-        ATTENDRO
-    </div>
-
-    <div class="submission-text">
-        A PROJECT REPORT SUBMITTED IN PARTIAL FULFILLMENT OF THE REQUIREMENTS FOR THE AWARD OF THE DIPLOMA IN
-        <br><br>
-        <strong>COMPUTER ENGINEERING</strong>
-    </div>
-
-    <div class="author-block">
-        SUBMITTED BY
-        <br><br>
-        <strong>[YOUR NAME]</strong>
-        <br>
-        (Roll No: [YOUR ROLL NO])
-    </div>
-
-    <div class="institute-block">
-        <br>
-        DEPARTMENT OF COMPUTER ENGINEERING
-        <br>
-        <strong>[NAME OF YOUR INSTITUTE]</strong>
-        <br>
-        [CITY, STATE - PIN CODE]
-        <br>
-        ACADEMIC YEAR: 2025-2026
-    </div>
+<h2>Title Page (i)</h2>
+<p><strong>Title:</strong> ATTENDRO: Smart Biometric + App-Based Attendance Management System using AI &amp; IoT<br />
+<strong>Candidate:</strong> ______________________<br />
+<strong>Diploma (Department):</strong> Applied AI &amp; ML<br />
+<strong>Institute:</strong> Rajarambapu Institute of Technology, Islampur<br />
+<strong>Academic Year:</strong> 2025–2026<br />
+<strong>Guide:</strong> ______________________<br />
+<strong>Date of Submission:</strong> ______________________</p>
 
 </body>
 </html>
